Added jacoco config